--- a/assemblies/pentaho-samples/pom.xml
+++ b/assemblies/pentaho-samples/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-platform-assemblies</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.0.0-9</version>
   </parent>
   <artifactId>pentaho-samples</artifactId>
-  <version>9.3.0.0-SNAPSHOT</version>
+  <version>9.3.0.0-9</version>
   <packaging>pom</packaging>
 
   <build>
