--- a/assemblies/pom.xml
+++ b/assemblies/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-platform-ce-parent</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.0.0-9</version>
   </parent>
 
   <artifactId>pentaho-platform-assemblies</artifactId>
-  <version>9.3.0.0-SNAPSHOT</version>
+  <version>9.3.0.0-9</version>
   <packaging>pom</packaging>
 
   <name>Platform assemblies</name>
